--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "todoangular",
   "version": "0.0.0",
+  "homepage": "https://rebecacfarias.github.io/todo-angular-frontend/",
   "scripts": {
+    "deploy": "ng build --prod && ./node_modules/.bin/gh-pages -d dist/todoangular",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -20,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
