--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "ngh:build": "ng build --prod",
+    "ngh:deploy": "ngh --branch=master"
   },
   "private": true,
   "dependencies": {
